cmake_minimum_required(VERSION 3.20)
project(cpp_primer_learn)

set(CMAKE_CXX_STANDARD 11)

add_executable(cpp_primer_learn main.cpp)

add_executable(initialize cp2/initialize.cpp cp2/extern_xx.cpp)

add_executable(refer_xx cp2/refer_xx.cpp)
add_executable(pointer_xx cp2/pointer_xx.cpp)
add_executable(const_xx cp2/const_xx.cpp)
add_executable(type_alias_xx cp2/type_alias_xx.cpp)
add_executable(decltype_xx cp2/decltype_xx.cpp cp2/Old_sales_data.h)
add_executable(string_xx cp3/string_xx.cpp)
add_executable(vector_xx cp3/vector_xx.cpp)
add_executable(array_xx cp3/array_xx.cpp)
add_executable(function_xx cp6_function/function_basic.cpp)
add_executable(function_xx2 cp6_function/function_main.cpp)
add_executable(function_changeable cp6_function/function_changeable.cpp cp6_function/function_changeable.h)
add_executable(function_pointer cp6_function/function_pointer.cpp)
add_executable(Sales_data cp7_class/Sales_data.h cp7_class/Sales_data.cpp)
add_executable(Screen cp7_class/Screen.cpp cp7_class/Screen.h cp7_class/Window_mgr.h cp7_class/Link_screen.h cp7_class/ConstRef.h)
add_executable(Data cp7_class/Data.cpp)
add_executable(Account cp7_class/Account.cpp cp7_class/Account.h)
add_executable(io_op cp8_io/io_op.cpp)
add_executable(file_io cp8_io/file_io.cpp)
add_executable(file_mode cp8_io/file_mode.cpp)
add_executable(string_io cp8_io/string_io.cpp)
add_executable(collection_xx cp9_collection/collection_xx.cpp)
add_executable(collection_adapter cp9_collection/collection_adapter.cpp)
add_executable(Generic cp10_generic_algo/Generic.cpp)
add_executable(asso_container cp11_associate_container/asso_container.cpp)
add_executable(hash_sam cp11_associate_container/hash_sam.cpp)
add_executable(intell_pointer cp12_dynamic_memory/intell_pointer.cpp cp12_dynamic_memory/StrBlob.h)

add_executable(NewAlloc cp12_dynamic_memory/NewAlloc.cpp)
add_executable(UnqPtr cp12_dynamic_memory/UnqPtr.cpp)
add_executable(WeakPtr cp12_dynamic_memory/WeakPtr.cpp cp12_dynamic_memory/StrBlobPtr.h)
add_executable(DynamicArray cp12_dynamic_memory/DynamicArray.cpp)
add_executable(Allocator cp12_dynamic_memory/Allocator.cpp)
add_executable(TextSearch cp12_dynamic_memory/TextSearch.cpp cp12_dynamic_memory/TextQuery.h cp12_dynamic_memory/QueryResult.h)
add_executable(Foo cp13_copy_control/Foo.cpp cp13_copy_control/HasPtr.h cp13_copy_control/HasPtr2.h)
add_executable(Sample cp14_op_type_convert/Sample.cpp cp14_op_type_convert/StrVec.h)
add_executable(OOPSample cp15_oop/OOPSample.cpp cp15_oop/Bulk_quote.h cp15_oop/Quote.h cp15_oop/Last.h)